--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
         <div class="container_img">
 
-            <div class="container_icon"><i class="fa-solid fa-arrow-up" style="color: #1e3050;"></i></div>
+            <div class="container_icon_up"><i class="fa-solid fa-arrow-up" style="color: #1e3050;"></i></div>
             
-            <!-- <img src="img/01.webp"> -->
+                <!-- <img src="img/01.webp">  -->
 
-            <div class="container_icon"><i class="fa-solid fa-arrow-down"></i></div>
+            <div class="container_icon_down"><i class="fa-solid fa-arrow-down"></i></div>
 
         </div>
 
@@ -34,3 +34,10 @@
 
 </body>
 </html>
+
+
+
+<!-- /* let element = document.createElement("img");
+element.innerHTML = `<img src = ${img(1)}></div>`
+let imgContainer = document.querySelector(".container_img");
+imgContainer.append(element); /* -->
