--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
         <div class="container_img">
 
-            <div class="container_icon_up"><i class="fa-solid fa-arrow-up" style="color: #1e3050;"></i></div>
+            <div id="next" class="container_icon_up"><i class="fa-solid fa-arrow-up" style="color: #1e3050;"></i></div>
             
                 <!-- <img src="img/01.webp">  -->
 
-            <div class="container_icon_down"><i class="fa-solid fa-arrow-down"></i></div>
+            <div id="prev" class="container_icon_down"><i class="fa-solid fa-arrow-down"></i></div>
 
         </div>
 
